Conflicts are resolved